--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="agendar-card">
                         <h3>Agendamento via WhatsApp</h3>
                         <p>Clique no botão abaixo para falar diretamente comigo e consultar horários disponíveis.</p>
-                        <a href="https://wa.me/5561992856864" target="_blank" class="btn-whatsapp">
+                        <a href="https://api.whatsapp.com/send/?phone=5561992856864&text=Ol%C3%A1%2C+gostaria+de+agendar+uma+sess%C3%A3o%21&type=phone_number&app_absent=0" target="_blank" class="btn-whatsapp">
                             Agendar pelo WhatsApp
                         </a>
                         <span class="crp-footer">Psicóloga Nathália Reis | CRP: 01/30814</span>
@@ -206,7 +206,7 @@
         </div>
     </footer>
 
-    <a href="https://wa.me/5561992856864" class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+    <a href="https://api.whatsapp.com/send/?phone=5561992856864&text=Ol%C3%A1%2C+gostaria+de+agendar+uma+sess%C3%A3o%21&type=phone_number&app_absent=0" class="whatsapp-float" target="_blank" rel="noopener noreferrer">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
         <span class="tooltip-whatsapp">Agende sua consulta</span>
     </a>
